--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
 <center>
-    <img src="/image/cover.jpg" />
-    <img src="/image/contents.jpg" />
+    <img src="image/cover.jpg" />
+    <img src="image/contents.jpg" />
 </center>
