--- a/index.html
+++ b/index.html
@@ -3,3 +3,8 @@
     <img src="image/cover.jpg" />
     <img src="image/contents.jpg" />
 </center>
+
+
+
+<br>
+<iframe src="https://docs.google.com/presentation/d/1_V5BDu-FedJT402HibnuBu451G9JfKfsW-_cQcXv1ew/embed?start=true&loop=true&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
