--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <img src="image/cover.jpg">
+                <img src="image/cover.jpg" width="100%">
 
                 <div id="disqus_thread"></div>
                 <script>
