--- a/html/test.html
+++ b/html/test.html
@@ -11,8 +11,8 @@
 <body>
 
 <center>
-    <img src="image/cover.jpg" />
-    <img src="image/contents.jpg" />
+    <img src="../image/cover.jpg" />
+    <img src="../image/contents.jpg" />
 </center>
 
 <br>
