--- a/html/index-old.html
+++ b/html/index-old.html
@@ -29,8 +29,6 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=gm3shZXysCdTWzZOxEiJ"></script>
-
 </head>
 
 <body>
@@ -46,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="index-old.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,35 +73,32 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
-                <div id="map" style="width:100%;height:400px;"></div>
+                <img src="../image/cover.jpg" width="100%">
 
+                <div id="disqus_thread"></div>
                 <script>
-                    var HOME_PATH = window.HOME_PATH || '.';
-                    var position = new naver.maps.LatLng(37.3849483, 127.1229117);
 
-                    var map = new naver.maps.Map('map', {
-                        center: position,
-                        zoom: 14
-                    });
-
-                    var markerOptions = {
-                        position: position.destinationPoint(90, 15),
-                        map: map,
-                        icon: {
-                            url: HOME_PATH +'/img/example/sally.png',
-                            size: new naver.maps.Size(50, 52),
-                            origin: new naver.maps.Point(0, 0),
-                            anchor: new naver.maps.Point(25, 26)
-                        }
-                    };
-
-                    var marker = new naver.maps.Marker(markerOptions);
+                    /**
+                     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                    /*
+                     var disqus_config = function () {
+                     this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                     };
+                     */
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = 'https://yumin-1.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
                 </script>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
             </div>
         </div>
         <!-- /.row -->
 
-    </div>
     <!-- /.container -->
 
     <!-- jQuery Version 1.11.1 -->
@@ -112,6 +107,9 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+    <script id="dsq-count-scr" src="//yumin-1.disqus.com/count.js" async></script>
 </body>
 
 </html>
+
+
