--- a/html/map.html
+++ b/html/map.html
@@ -29,6 +29,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?clientId=gm3shZXysCdTWzZOxEiJ"></script>
+
 </head>
 
 <body>
@@ -44,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Home</a>
+                <a class="navbar-brand" href="index-old.html">Home</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,7 +75,30 @@
 
         <div class="row">
             <div class="col-lg-12 text-center">
+                <div id="map" style="width:100%;height:400px;"></div>
 
+                <script>
+                    var HOME_PATH = window.HOME_PATH || '.';
+                    var position = new naver.maps.LatLng(37.3849483, 127.1229117);
+
+                    var map = new naver.maps.Map('map', {
+                        center: position,
+                        zoom: 14
+                    });
+
+                    var markerOptions = {
+                        position: position.destinationPoint(90, 15),
+                        map: map,
+                        icon: {
+                            url: HOME_PATH +'/img/example/sally.png',
+                            size: new naver.maps.Size(50, 52),
+                            origin: new naver.maps.Point(0, 0),
+                            anchor: new naver.maps.Point(25, 26)
+                        }
+                    };
+
+                    var marker = new naver.maps.Marker(markerOptions);
+                </script>
             </div>
         </div>
         <!-- /.row -->
