--- a/index.html
+++ b/index.html
@@ -212,26 +212,26 @@
                     <div id="map" style="width:100%;height:400px;"></div>
 
                     <script>
-                        var HOME_PATH = window.HOME_PATH || '.';
-                        var position = new naver.maps.LatLng(37.3849483, 127.1229117);
-
-                        var map = new naver.maps.Map('map', {
-                            center: position,
-                            zoom: 14
-                        });
-
-                        var markerOptions = {
-                            position: position.destinationPoint(90, 15),
-                            map: map,
-                            icon: {
-                                url: HOME_PATH +'/img/example/sally.png',
-                                size: new naver.maps.Size(50, 52),
-                                origin: new naver.maps.Point(0, 0),
-                                anchor: new naver.maps.Point(25, 26)
-                            }
-                        };
-
-                        var marker = new naver.maps.Marker(markerOptions);
+//                        var HOME_PATH = window.HOME_PATH || '.';
+//                        var position = new naver.maps.LatLng(37.3849483, 127.1229117);
+//
+//                        var map = new naver.maps.Map('map', {
+//                            center: position,
+//                            zoom: 14
+//                        });
+//
+//                        var markerOptions = {
+//                            position: position.destinationPoint(90, 15),
+//                            map: map,
+//                            icon: {
+//                                url: HOME_PATH +'/img/example/sally.png',
+//                                size: new naver.maps.Size(50, 52),
+//                                origin: new naver.maps.Point(0, 0),
+//                                anchor: new naver.maps.Point(25, 26)
+//                            }
+//                        };
+//
+//                        var marker = new naver.maps.Marker(markerOptions);
                     </script>
                 </div>
             </div>
@@ -242,7 +242,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">유민이에게 축하 메시지를 남겨주세요!</h2>
+                    <h2 class="section-heading">축하 메시지를 남겨주세요!</h2>
                     <hr class="primary">
                     <div id="disqus_thread"></div>
                     <script>
