--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             position: position.destinationPoint(90, 15),
                             map: map,
                             icon: {
-                                url: HOME_PATH +'/img/example/sally.png',
+                                url: HOME_PATH +'/img/yumin_fav.jpg',
                                 size: new naver.maps.Size(50, 52),
                                 origin: new naver.maps.Point(0, 0),
                                 anchor: new naver.maps.Point(25, 26)
