--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         position: position.destinationPoint(90, 15),
                         map: map,
                         icon: {
-                            url: HOME_PATH +'/img/yumin_fav.jpg',
+                            url: HOME_PATH +'/img/yumin.png',
                             size: new naver.maps.Size(50, 52),
                             origin: new naver.maps.Point(0, 0),
                             anchor: new naver.maps.Point(25, 26)
