--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
                         '   <p>인천 연수구 센트럴로 194 | 송도동 23-4 센트럴파크II B동 3F 더샵센트럴파크2<br />',
-                        '       <img src="'+ HOME_PATH +'/img/yumin.png" class="thumb" /><br />',
+                        '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
                         '       032-832-2020<br />',
                         '       <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
                         '   </p>',
