--- a/index.html
+++ b/index.html
@@ -52,6 +52,25 @@
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <style>
+        .iw_inner {
+            padding: 10px;
+        }
+        .iw_inner h3 {
+            font-size: 16px;
+            font-weight: bold;
+            padding-bottom: 5px;
+            margin: 10px 0;
+        }
+        .iw_inner p {
+            font-size: 12px;
+            color: #333;
+        }
+        .iw_inner img.thumb {
+            float: right;
+            border: solid 1px #aeaeae;
+        }
+    </style>
 </head>
 
 <body id="page-top">
