--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
                     infowindow.open(map, marker);
                 })();
             </script>
+            <img src="img/parking.png">
         </div>
     </section>
 
