--- a/index.html
+++ b/index.html
@@ -346,7 +346,10 @@
                     infowindow.open(map, marker);
                 })();
             </script>
-            <img src="img/parking.png">
+
+            <div style="width:100%;height:400px; text-align:center">
+                <img src="img/parking.png" style="height:400px;">
+            </div>
         </div>
     </section>
 
