--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     var contentString = [
                         '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
-                        '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 센트럴파크II B동 3F 더샵센트럴파크2<br />',
+                        '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 더샵센트럴파크2 B동 3F<br />',
                         '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
                         '       032-832-2020<br />',
                         '       <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
@@ -347,8 +347,18 @@
                 })();
             </script>
 
-            <div style="width:100%;height:400px; text-align:center">
-                <img src="img/parking.png" style="height:400px;">
+            <div class="row" style="width:100%;height:400px;">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <img src="img/parking.png" style="width:100%">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">지하철 이용 시</h2>
+                    <hr class="primary">
+                    <p>센트럴파크역 3번출구 하차 후 도보 10분 거리<br />(공원 산책로를 따라 걸어오세요)</p>
+                    <p>행사 시작 30분 전부터 행사 시작 후 1시간까지 셔틀버스 운행 <br /> (센트럴파크역 3번 출구에서 탑승 가능)</p>
+                </div>
             </div>
         </div>
     </section>
