--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                         });
 
                     var contentString = [
-                        '<div class="iw_inner">',
+                        '<div class="iw_inner" style="width:85%">',
                         '   <h3>파티파라나</h3>',
                         '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 더샵센트럴파크2 B동 3F<br />',
                         '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
