--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 (function() {
                     var HOME_PATH = window.HOME_PATH || '.';
 
-                    var cityhall = new naver.maps.LatLng(37.3946344, 126.638529),
+                    var cityhall = new naver.maps.LatLng(37.3940855, 126.6411801),
                         map = new naver.maps.Map('map', {
                             center: cityhall.destinationPoint(0, 500),
                             zoom: 10
@@ -321,7 +321,7 @@
                         });
 
                     var contentString = [
-                        '<div class="iw_inner" style="width:85%">',
+                        '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
                         '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 더샵센트럴파크2 B동 3F<br />',
                         '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
