--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
-                <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <!--<hr>-->
+                <br/><br/><br/><br/><br/><br/><br/>
+                <p>유민이의 첫 생일을 축하해주세요. <br />장소 : 파티파라나 </p>
+                <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
             </div>
         </div>
     </header>
