--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             float: right;
             border: solid 1px #aeaeae;
         }
+        .bgblack {
+            background-color: #000000;
+        }
     </style>
 </head>
 
@@ -113,9 +116,9 @@
                 <!--<hr>-->
                 <br/><br/><br/><br/><br/><br/><br/>
                 <p>
-                    <span style="background-color: #000000">유민이의 첫 생일을 축하해주세요</span> <br />
-                    <span style="background-color: #000000">2017년 7월 22일(토) 저녁 6시 30분</span> <br/>
-                    <span style="background-color: #000000">송도 파티파라나 A홀</span>
+                    <span class="bgblack">유민이의 첫 생일을 축하해주세요</span> <br />
+                    <span class="bgblack">2017년 7월 22일(토) 저녁 6시 30분</span> <br/>
+                    <span class="bgblack">송도 파티파라나 A홀</span>
                 </p>
                 <!--<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>-->
             </div>
