--- a/index.html
+++ b/index.html
@@ -329,18 +329,14 @@
                             position: cityhall
                         });
 //   '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
-//                    var contentString = [
-//                        '<div class="iw_inner">',
-//                        '   <h3>파티파라나</h3>',
-//                        '   <p>인천 연수구 센트럴로 194<br /> 송도동 23-4 더샵센트럴파크2 B동 3F<br />',
-//                        '       032-832-2020<br />',
-//                        '       <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
-//                        '   </p>',
-//                        '</div>'
-//                    ].join('');
                     var contentString = [
                         '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
+                        '   <p>인천 연수구 센트럴로 194 (송도동 23-4)<br />',
+                        '   더 샵 센트럴파크2 B동 3F<br />',
+                        '   032-832-2020<br />',
+                        '   <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
+                        '   </p>',
                         '</div>'
                     ].join('');
 
