--- a/index.html
+++ b/index.html
@@ -305,6 +305,22 @@
         </div>
     </section>
 
+    <section class="bg-primary" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">오시는 길</h2>
+                    <hr class="light">
+                    <p class="text-faded">
+                        인천 연수구 센트럴로 194 (송도동 23-4) <br/>
+                        더 샵 센트럴파크2 B동 3F <br/>
+                        032-832-2020 <br/>
+                        <a href="http://www.partyparana.com/" target="_blank" style="color: #ffffff">http://www.partyparana.com/</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="services">
         <div class="container">
             <div class="row">
@@ -333,14 +349,14 @@
                             position: cityhall
                         });
 //   '       <img src="'+ HOME_PATH +'/img/yumin.png" width="55" height="55" class="thumb" /><br />',
+//                    '   <p>인천 연수구 센트럴로 194 (송도동 23-4)<br />',
+//                        '   더 샵 센트럴파크2 B동 3F<br />',
+//                        '   032-832-2020<br />',
+//                        '   <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
+//                        '   </p>',
                     var contentString = [
                         '<div class="iw_inner">',
                         '   <h3>파티파라나</h3>',
-                        '   <p>인천 연수구 센트럴로 194 (송도동 23-4)<br />',
-                        '   더 샵 센트럴파크2 B동 3F<br />',
-                        '   032-832-2020<br />',
-                        '   <a href="http://www.partyparana.com/" target="_blank">http://www.partyparana.com/</a>',
-                        '   </p>',
                         '</div>'
                     ].join('');
 
