--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         </div>
     </section>
 
-    <section class="bg-primary" id="about">
+    <section class="bg-primary" id="about" style="padding-bottom: 30px; padding-top: 30px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -309,7 +309,7 @@
 
                         <br/><br/>
 
-                        <span style="color: #ffffff">032-832-2020</span><br/>
+                        <span style="color: #ffffff;">032-832-2020</span><br/>
                         <a href="http://www.partyparana.com/" target="_blank" style="color: #ffffff">http://www.partyparana.com/</a>
                     </p>
                 </div>
