--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
                         <a class="page-scroll" href="#page-top">HOME</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">인사말</a>
+                        <a class="page-scroll" href="#greetings">인사말</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">사진첩</a>
+                        <a class="page-scroll" href="#photos">사진첩</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">오시는 길</a>
+                        <a class="page-scroll" href="#mapAndDirections">오시는 길</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">유민이에게</a>
+                        <a class="page-scroll" href="#disqus">유민이에게</a>
                     </li>
                 </ul>
             </div>
@@ -128,7 +128,7 @@
         </div>
     </header>
 
-    <section class="no-padding" id="about">
+    <section class="no-padding" id="greetings">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -138,7 +138,7 @@
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="photos">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
@@ -295,7 +295,7 @@
         </div>
     </section>
 
-    <section class="bg-primary" id="about" style="padding-bottom: 30px; padding-top: 30px;">
+    <section class="bg-primary" id="mapAndDirections" style="padding-bottom: 30px; padding-top: 30px;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -320,7 +320,7 @@
     <section class="no-padding" id="services">
         <div class="container">
             <div class="row">
-                <div id="map" style="width:100%;height:370px;"></div>
+                <div id="map" style="width:100%;height:380px;"></div>
             </div>
 
             <script>
@@ -385,7 +385,7 @@
             </div>
     </section>
 
-    <section id="contact">
+    <section id="disqus">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -403,6 +403,7 @@
                          this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                          };
                          */
+
                         (function() { // DON'T EDIT BELOW THIS LINE
                             var d = document, s = d.createElement('script');
                             s.src = 'https://yumin-1.disqus.com/embed.js';
