--- a/index.html
+++ b/index.html
@@ -385,8 +385,8 @@
             </div>
     </section>
 
-    <section id="disqus">
-        <div class="container">
+    <section>
+        <div class="container" id="disqus">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">축하 메시지를 남겨주세요!</h2>
