--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
                         <br/><br/>
 
-                        <span style="color: #ffffff;">032-832-2020</span><br/>
+                        <a style="color: #ffffff;" href="tel:032-832-2020">032-832-2020</a><br/>
                         <a href="http://www.partyparana.com/" target="_blank" style="color: #ffffff">http://www.partyparana.com/</a>
                     </p>
                 </div>
