--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#page-top">HOME</a>
+                        <a class="page-scroll" href="#page-top">처음으로</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#greetings">인사말</a>
