--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title"			content="성유민의 첫 번째 생일파티에 초대합니다"/>
     <meta property="og:image"			content="http://yuminsung.github.io/img/header.jpg"/>
-    <meta property="og:description"		content="2017/07/22(토) 6:30 PM 인천 파티파라나 A홀"/>
+    <meta property="og:description"		content="2017/07/22(토) 6:30 PM 송도 파티파라나 A홀"/>
 
     <title>Yumin's 1st Birthday Party</title>
 
