--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="2017/07/22(토) 6:30 PM 송도 파티파라나 A홀">
     <meta name="author" content="">
 
     <meta property="og:title"			content="성유민의 첫 번째 생일파티에 초대합니다"/>
     <meta property="og:image"			content="http://yuminsung.github.io/img/header.jpg"/>
     <meta property="og:description"		content="2017/07/22(토) 6:30 PM 송도 파티파라나 A홀"/>
 
-    <title>Yumin's 1st Birthday Party</title>
+    <title>성유민의 첫 번째 생일파티에 초대합니다</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
