--- a/index.html
+++ b/index.html
@@ -337,7 +337,9 @@
                     <hr class="light">
                     <p class="text-faded">
                         인천 연수구 센트럴로 194 (송도동 23-4) <br/>
-                        더 샵 센트럴파크2 B동 3F 파티파라나 A홀<br/><br/>
+                        더 샵 센트럴파크2 B동 3F<br/>
+                        파티파라나 A홀
+                        <br/><br/>
 
                         <a href="http://m.tmap.co.kr/tmap2/mobile/route.jsp?name=파티파라나&lon=126.642668&lat=37.393607" class="page-scroll btn btn-default btn-xl sr-button" target="_blank">Tmap 길안내</a>
 
